<resources>
    <string name="app_name">EasyPhotos</string>

    <string name="selector_folder_all_easy_photos">所有图片</string>

    <string name="selector_folder_all_video_photo_easy_photos">图片和视频</string>

    <string name="selector_folder_video_easy_photos">所有视频</string>

    <string name="selector_easy_photos">选择</string>

    <!--http://stackoverflow.com/questions/17502824/whats-wrong-with-this-format-string-->
    <string name="selector_action_done_easy_photos">完成(%1$d/%2$d)</string>

    <string name="selector_preview_easy_photos">预览</string>

    <string name="selector_reach_max_hint_easy_photos">最多只能选择%d张图片或视频</string>

    <string name="selector_reach_max_image_hint_easy_photos">最多只能选择%d张图片</string>

    <string name="selector_reach_max_video_hint_easy_photos">最多只能选择%d个视频</string>

    <string name="msg_no_camera_easy_photos">无法启动相机！</string>

    <string name="camera_temp_file_error_easy_photos">图片错误</string>

    <string name="selector_permission_error_easy_photos">权限错误，无法正常工作！</string>

    <string name="selector_image_size_error_easy_photos">图片的宽度必须大于%1$d,高度必须大于%2$d</string>

    <string name="selector_image_type_error_easy_photos">不支持此图片格式</string>

    <string name="edit_easy_photos">编辑</string>

    <string name="empty_easy_photos">清空</string>

    <string name="no_photos_easy_photos">没有符合要求的图片，拍一张吧</string>

    <string name="permissions_again_easy_photos">请点击并允许相关权限</string>

    <string name="permissions_die_easy_photos">请点击并在设置中允许相关权限</string>

    <string name="original_easy_photos">原图</string>

    <string name="preview_current_number_easy_photos">%1$d/%2$d</string>

    <string name="done_easy_photos">完成</string>

    <string name="cancel_easy_photos">取消</string>

    <string name="template_easy_photos">模板</string>

    <string name="text_sticker_easy_photos">文字</string>

    <string name="text_sticker_date_easy_photos">日期</string>

    <string name="text_sticker_hint_easy_photos">双击编辑</string>

    <string name="text_sticker_hint_name_easy_photos">自定义</string>

    <string name="picture_selection_easy_photos">选择图片</string>

    <string name="video_selection_easy_photos">视频选择</string>

    <string name="puzzle_easy_photos">拼一张</string>

    <string name="select_puzzle_photos">请选择2 \- 9张照片</string>

    <string name="gif_easy_photos">动图</string>

    <string name="video_easy_photos">视频</string>


</resources>
