<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/coordinator"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="#ffffff">

   <LinearLayout
      android:id="@+id/ll_top"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="44dp">

         <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:src="@drawable/iv_close_black" />

         <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/picture_selection_easy_photos"
            android:textColor="#212121"
            android:textSize="16sp"
            android:visibility="visible" />
      </RelativeLayout>

      <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_photos"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_weight="1"
         android:scrollbars="vertical" />

      <RelativeLayout
         android:id="@+id/m_bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="44dp">

         <TextView
            android:id="@+id/tv_album_items"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:text="@string/selector_folder_all_easy_photos"
            android:textColor="#FF648A"
            android:textSize="14sp" />

         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tv_album_items"
            android:gravity="center_vertical">

            <ImageView
               android:id="@+id/iv_original"
               android:layout_width="27dp"
               android:layout_height="27dp"
               android:padding="6dp"
               android:src="@drawable/icon_image_checked" />

            <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/original_easy_photos"
               android:textColor="#333333"
               android:textSize="14sp"
               android:visibility="visible" />
         </LinearLayout>

         <com.selector.picture.ui.widget.PressedTextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/selector_preview_easy_photos"
            android:textColor="@color/easy_photos_fg_primary"
            android:visibility="gone" />

         <com.selector.picture.ui.widget.PressedTextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_menu_done_easy_photos"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="6dp"
            android:paddingRight="10dp"
            android:paddingBottom="6dp"
            android:textColor="@color/menu_text_easy_photos"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

      </RelativeLayout>

   </LinearLayout>

   <LinearLayout
      android:id="@+id/root_view_album_items"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:visibility="gone">

      <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3" />

      <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_album_items"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="6"
         android:background="@drawable/bg_dialog_album_items_background_easy_photos"
         android:scrollbars="none" />
   </LinearLayout>

   <RelativeLayout
      android:id="@+id/rl_permissions_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="44dp"
      android:layout_marginBottom="44dp"
      android:background="@color/easy_photos_fg_primary"
      android:visibility="gone">

      <TextView
         android:id="@+id/tv_permission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="@color/easy_photos_fg_accent"
         android:textStyle="bold" />

      <ImageView
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_above="@+id/tv_permission"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         app:srcCompat="@drawable/ic_notifications_easy_photos" />
   </RelativeLayout>

   <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_camera"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="50dp"
      android:src="@drawable/ic_camera_easy_photos"
      android:visibility="gone"
      tools:ignore="VectorDrawableCompat" />

</RelativeLayout>