<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/m_root_view"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/easy_photos_bg_primary">

   <com.selector.picture.ui.widget.PreviewRecyclerView
      android:id="@+id/rv_photos"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

   <FrameLayout
      android:id="@+id/m_bar_root_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true">

      <FrameLayout
         android:id="@+id/m_top_bar_layout"
         style="?metaButtonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/easy_photos_status_bar">

         <RelativeLayout
            android:id="@+id/m_top_bar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="top"
            android:background="@color/easy_photos_bar_primary"
            android:clickable="true"
            android:fitsSystemWindows="true"
            android:focusable="true">

            <ImageView
               android:id="@+id/iv_back"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_alignParentStart="true"
               android:layout_alignParentLeft="true"
               android:paddingLeft="14dp"
               android:paddingRight="14dp"
               app:srcCompat="@drawable/iv_close_white" />

            <com.selector.picture.ui.widget.PressedTextView
               android:id="@+id/tv_number"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_centerInParent="true"
               android:gravity="center"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:textColor="@color/easy_photos_fg_primary"
               android:textSize="16sp" />

         </RelativeLayout>
      </FrameLayout>

      <RelativeLayout
         android:id="@+id/m_bottom_bar"
         style="?metaButtonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="@color/easy_photos_bar_primary_translation"
         android:clickable="true"
         android:fitsSystemWindows="true"
         android:focusable="true">

         <FrameLayout
            android:id="@+id/fl_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="gone">

            <fragment
               android:id="@+id/fragment_preview"
               android:name="com.selector.picture.ui.PreviewFragment"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
         </FrameLayout>

         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@+id/fl_fragment">

            <com.selector.picture.ui.widget.PressedTextView
               android:id="@+id/tv_edit"
               android:layout_width="wrap_content"
               android:layout_height="42dp"
               android:layout_alignParentStart="true"
               android:layout_alignParentLeft="true"
               android:layout_centerVertical="true"
               android:gravity="center"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:text="@string/edit_easy_photos"
               android:textColor="#333333"
               android:textStyle="bold"
               android:visibility="gone" />

            <TextView
               android:id="@+id/tv_original"
               android:layout_width="wrap_content"
               android:layout_height="42dp"
               android:layout_centerInParent="true"
               android:layout_centerVertical="true"
               android:gravity="center"
               android:text="@string/original_easy_photos"
               android:textColor="#333333"
               android:textStyle="bold"
               android:visibility="gone" />

            <ImageView
               android:id="@+id/iv_selector"
               android:layout_width="27dp"
               android:layout_height="27dp"
               android:layout_centerVertical="true"
               android:layout_marginLeft="14dp"
               android:padding="5dp"
               android:src="@drawable/icon_image_checked" />

            <TextView
               android:id="@+id/tv_selector"
               android:layout_width="wrap_content"
               android:layout_height="42dp"
               android:layout_centerVertical="true"
               android:layout_toRightOf="@+id/iv_selector"
               android:gravity="center"
               android:text="@string/selector_easy_photos"
               android:textColor="#ffffff"
               android:textSize="14sp" />

            <com.selector.picture.ui.widget.PressedTextView
               android:id="@+id/tv_done"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentEnd="true"
               android:layout_alignParentRight="true"
               android:layout_centerVertical="true"
               android:layout_marginRight="14dp"
               android:background="@drawable/bg_menu_done_easy_photos"
               android:gravity="center"
               android:maxWidth="200dp"
               android:padding="6dp"
               android:textColor="@color/menu_text_easy_photos"
               android:textSize="12sp"
               android:textStyle="bold" />
         </RelativeLayout>

      </RelativeLayout>
   </FrameLayout>
</FrameLayout>
